--- a/heavycenter/src/main/res/layout/item_main_order_doing.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_doing.xml
@@ -55,6 +55,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                         <TextView
+                            android:id="@+id/tv_carnum"
                             android:text="车"
                             android:textSize="13sp"
                             android:textColor="@color/color_yell_blue"
@@ -71,6 +72,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                     <TextView
+                        android:id="@+id/tv_current"
                         android:text="10"
                         android:textSize="13sp"
                         android:textColor="@color/color_yell_blue"
@@ -78,6 +80,7 @@
                         android:layout_height="wrap_content" />
 
                     <TextView
+                        android:id="@+id/tv_plan"
                         android:text="/198t"
                         android:textSize="13sp"
                         android:textColor="@color/color_hv_yelll"
@@ -107,6 +110,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="0dp">
                         <TextView
+                            android:id="@+id/tv_goodname"
                             android:singleLine="true"
                             android:textColor="@color/white"
                             android:textSize="18sp"
@@ -115,6 +119,7 @@
                             android:layout_height="wrap_content" />
 
                         <TextView
+                            android:id="@+id/tv_spes"
                             android:singleLine="true"
                             android:layout_marginLeft="14dp"
                             android:textColor="@color/white"
@@ -127,6 +132,7 @@
                             android:layout_width="0dp"
                             android:layout_height="1dp"/>
                         <TextView
+                            android:id="@+id/tv_carno"
                             android:background="@drawable/bg_hv_sel_yel_blue_stroke"
                             android:singleLine="true"
                             android:layout_marginLeft="7dp"
@@ -147,6 +153,7 @@
                         android:layout_height="0dp">
 
                         <TextView
+                            android:id="@+id/tv_type"
                             android:background="@drawable/bg_hv_sharp2_blue_solid"
                             android:singleLine="true"
                             android:textColor="@color/black"
@@ -155,6 +162,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                         <TextView
+                            android:id="@+id/tv_companyname"
                             android:singleLine="true"
                             android:layout_marginLeft="10dp"
                             android:textColor="@color/white"
@@ -168,6 +176,7 @@
                     </LinearLayout>
 
                     <TextView
+                        android:id="@+id/tv_starttime"
                         android:layout_marginTop="7dp"
                         android:gravity="center_vertical"
                         android:textColor="@color/white"
@@ -177,12 +186,12 @@
                         android:layout_height="wrap_content" />
 
                     <TextView
+                        android:id="@+id/tv_endtime"
                         android:layout_marginBottom="5dp"
                         android:layout_marginTop="3dp"
                         android:gravity="center_vertical"
                         android:textColor="@color/white"
                         android:textSize="13sp"
-                        android:text="开始时间：2017/12/09 10:00"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
