--- a/heavycenter/src/main/res/layout/item_main_trans.xml
+++ b/heavycenter/src/main/res/layout/item_main_trans.xml
@@ -4,21 +4,21 @@
     <data>
         <variable
             name="item_main_trans"
-            type="String" />
+            type="com.siweisoft.heavycenter.data.netd.trans.trans.TransRes.ResultsBean" />
     </data>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/ll_trans"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="110dp"
         android:clipToPadding="false"
         >
     <LinearLayout
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="110dp"
         >
         <RelativeLayout
             android:background="@color/color_item_main_trans_dark"
@@ -55,19 +55,8 @@
             </LinearLayout>
 
 
-            <com.android.lib.view.line.view.HorizonDashView
-                android:layout_marginRight="5dp"
-                android:layout_alignParentBottom="true"
-                DashView:dashgap = "2dp"
-                DashView:hashwidth = "2dp"
-                DashView:dashcolor = "@color/white"
-                android:layout_width="match_parent"
-                android:layout_height="1px" />
         </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
         <LinearLayout
             android:background="@color/color_item_main_trans_light"
             android:paddingLeft="10dp"
@@ -88,35 +77,40 @@
                     android:singleLine="true"
                     android:textColor="@color/white"
                     android:textSize="@dimen/hv_dimen_text_title"
-                    android:text="混凝土"
+                    android:text="@{item_main_trans.productName}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:layout_weight="1"
                     android:singleLine="true"
                     android:layout_marginLeft="14dp"
                     android:textColor="@color/white"
                     android:textSize="@dimen/hv_dimen_text_title"
-                    android:text="C30"
-                    android:layout_width="wrap_content"
+                    android:text="@{item_main_trans.specifications}"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
-                <View
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:layout_height="1dp"/>
+
+                <LinearLayout
+                    android:gravity="center_vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
                 <ImageView
                     android:src="@drawable/icon_hv_local"
                     android:layout_width="15dp"
                     android:layout_height="15dp" />
                 <TextView
-                        android:background="@drawable/bg_hv_sharp2_yell_stroke"
+
+                    android:background="@drawable/bg_hv_sharp2_yell_stroke"
                     android:singleLine="true"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginLeft="5dp"
                     android:textColor="@color/color_base_txt_heavycenter_y"
                     android:textSize="14sp"
-                    android:text="沪A2345"
+                    android:text="@{item_main_trans.carLicenseNo}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
+
+                </LinearLayout>
             </LinearLayout>
 
 
@@ -131,7 +125,7 @@
                     android:singleLine="true"
                     android:textColor="@color/white"
                     android:textSize="@dimen/hv_dimen_text"
-                    android:text="驾驶员"
+                    android:text="@{item_main_trans.trueName}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
@@ -164,7 +158,7 @@
                     android:layout_marginLeft="10dp"
                     android:textColor="@color/white"
                     android:textSize="@dimen/hv_dimen_text"
-                    android:text="10t"
+                    android:text="@{item_main_trans.receiveCompanyName}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
@@ -194,7 +188,7 @@
                     android:singleLine="true"
                     android:textColor="@color/white"
                     android:textSize="@dimen/hv_dimen_text"
-                    android:text="上海绿地"
+                    android:text="@{item_main_trans.develiverCompanyName}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <TextView
@@ -213,6 +207,7 @@
 
 
                 <com.siweisoft.heavycenter.module.view.text.BgTextView
+                    android:id="@+id/bt_sure"
                     android:paddingTop="2dp"
                     android:paddingBottom="2dp"
                     android:paddingLeft="15dp"
@@ -242,39 +237,8 @@
 
             </LinearLayout>
         </LinearLayout>
-            <com.android.lib.view.line.view.HorizonDashView
-                android:layout_marginLeft="5dp"
-                android:layout_alignParentBottom="true"
-                DashView:dashgap = "2dp"
-                DashView:hashwidth = "2dp"
-                DashView:dashcolor = "@color/white"
-                android:layout_width="match_parent"
-                android:layout_height="1px" />
-        </RelativeLayout>
     </LinearLayout>
 
-        <com.android.lib.view.line.view.VerticalDashView
-            android:layout_marginLeft="90dp"
-            android:layout_alignParentBottom="true"
-            DashView:dashgap = "2dp"
-            DashView:w = "0.5dp"
-            DashView:hashwidth = "2dp"
-            DashView:dashcolor = "@color/gray"
-            android:layout_width="1dp"
-            android:layout_height="match_parent"  />
-
-
-        <com.siweisoft.heavycenter.module.view.circle.UpCircleView
-            android:layout_marginLeft="87.5dp"
-            android:layout_width="5dp"
-            android:layout_height="5dp" />
-
-
-        <com.siweisoft.heavycenter.module.view.circle.DownCircleView
-            android:layout_alignParentBottom="true"
-            android:layout_marginLeft="87.5dp"
-            android:layout_width="5dp"
-            android:layout_height="5dp" />
 
     </RelativeLayout>
 </layout>
